--- a/AF13-AT08-proposal.tex
+++ b/AF13-AT08-proposal.tex
@@ -200,7 +200,7 @@ The scope of this effort is to define, organize, and evaluate potential communic
 \end{enumerate}
 
 \paragraph{Milestone Schedule}~\\
-The proposed Phase I effort is scheduled as shown in the Gantt chart in Figure~\ref{Gantt}. The majority of the primary research will be accomplished during the first six months of the Phase I SBIR project. The last three months will provide project continuity to Phase II. Work will be performed at AHS Engineering Services facilities and the University of New Mexico in Albuquerque, New Mexico.
+The proposed Phase I effort is scheduled as shown in the Gantt chart in Figure~\ref{Gantt}. The majority of the primary research will be accomplished during the first six months of the Phase I STTR project. The last three months will provide project continuity to Phase II. Work will be performed at AHS Engineering Services facilities and the University of New Mexico in Albuquerque, New Mexico.
 
 \begin{figure}[h]
  \centerline{\includegraphics[width=5in]{./images/AF13-AT08_Gantt_Chart.png}}
@@ -226,7 +226,7 @@ Our work plan is fully responsive to the requirements stated in the published to
 \it{Use or disclosure of data contained on this page is subject to the restriction on the first page of this volume.}}
 
 \sbirsection{Phase I Work Plan}
-{This Phase I SBIR will result in the definition of the WARDEN technical approach and a software prototype that demonstrates the key aspects of our approach. These results will be in sufficient detail to show proof-of-concept and demonstrate feasibility for the Phase II project and Phase III commercialization.}
+{This Phase I STTR will result in the definition of the WARDEN technical approach and a software prototype that demonstrates the key aspects of our approach. These results will be in sufficient detail to show proof-of-concept and demonstrate feasibility for the Phase II project and Phase III commercialization.}
 
 \subsection{Key Aspects and Innovation}
 AHS Engineering Services is an experienced and highly capable research and development contractor with a proven record of thorough research and innovation, directed toward solving real problems. AHS Engineering Services has been active for over a decade in researching the key technologies required in this effort, and its members have faculty affiliations with the University of New Mexico and the Informatics Research Group, which is highly experienced in the areas of information security and usage management. Our approach integrates proven existing technologies with new innovative approaches. The use and leverage of proven technology provides a sound foundation for our technical approach, reducing technical risk, and providing a platform for our key innovations.
@@ -355,7 +355,7 @@ Finally, non-interference analysis is based on the idea that if specific input h
 %products such as ArcGIS~\cite{esri:13,gearth:13}. Both GPS-based and IP address-centric geolocation techniques can integrate with these types of data solutions into a single, unified system. With that in mind, however, these kinds of geographic information systems do not provide messaging functionality directly, nor do they implicitly support it---they can be leveraged as components to provide integrated solutions.
 
 \sbirsection{Relationship with Future Research or Research and Development}{}
-AHS Engineering Services was established to address the innovative application of information technologies. As a result, we are committed to the approach described in this proposal and are enthusiastic about its potential. Our current and past R\&D projects provide an excellent technical foundation for the Phase I effort. Phase I will demonstrate the feasibility of our approach and will lay the groundwork for the Phase II development and transition. Our Phase I work will rigorously show the covert channel characteristics of cross domain workflows and establish the security bounds under which different protocols and classes of protocols can operate. Specifically, upon successful completion of Phase I, we will have analyzed a taxonomy of potential protocols and evaluated the most promising ones. With this information we will have prototyped reference implementations of the promising protocols and an example system facilitating cross domain workflows. We will be well positioned to build production quality systems and supporting tools with rigorously verified covert communications characteristics, and we will have constructed a roadmap for application to an Air Force initiative within the Unified Cross Domain Management Office (UCDMO), which includes identifying the applicable clearances, certifications, and approvals required to conduct Phase II testing. Collectively, the anticipated results from Phase I will provide a solid foundation for Phase II. In Phase II, we will build the full WARDEN framework and apply it to the UCDMO. Phase III would bring this WARDEN framework to the marketplace (see Section~\ref{commercialization} below).
+AHS Engineering Services was established to address the innovative application of information technologies. As a result, we are committed to the approach described in this proposal and are enthusiastic about its potential. Our current and past R\&D projects provide an excellent technical foundation for the Phase I effort. Phase I will demonstrate the feasibility of our approach and will lay the groundwork for the Phase II development and transition. Our Phase I work will rigorously show the covert channel characteristics of cross-domain workflows and establish the security bounds under which different protocols and classes of protocols can operate. Specifically, upon successful completion of Phase I, we will have analyzed a taxonomy of potential protocols and evaluated the most promising ones. With this information we will have prototyped reference implementations of the promising protocols and an example system facilitating cross-domain workflows. We will be well positioned to build production quality systems and supporting tools with rigorously verified covert communications characteristics, and we will have constructed a roadmap for application to an Air Force initiative within the Unified Cross Domain Management Office (UCDMO), which includes identifying the applicable clearances, certifications, and approvals required to conduct Phase II testing. Collectively, the anticipated results from Phase I will provide a solid foundation for Phase II. In Phase II, we will build the full WARDEN framework and apply it to the UCDMO. Phase III would bring this WARDEN framework to the marketplace (see Section~\ref{commercialization} below).
 
 Our successful realization of our Phase I and II objectives and achievement of Phase III commercialization is expected to provide the following benefits to both Government and private sector customers of WARDEN:
 \vspace{-0.1in}
